--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	<script type="text/javascript"
 			src="js/jquery-ui-1.8.23.custom.min.js"></script>
 
-	<script type="text/javascript" src="js/levels.js"></script>
 	<script type="text/javascript" src="js/smoother.js"></script>
+	<script type="text/javascript" src="js/levels.js"></script>
+	<script type="text/javascript" src="js/color.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
