Update availability status.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 	<h2>Browser Support</h2>
 	<p>See <a href="http://caniuse.com/stream">support for stream API</a> (in-browser audio acquisition) and <a href="http://caniuse.com/#feat=audio-api">web audio API</a> (in-browser audio processing).</p>
 	<table>
-		<tr><th>Browser</th><th>Support as of 2012 Oct 3</th></tr>
-		<tr><td>Chrome</td><td>Available only in <a href="https://tools.google.com/dlpage/chromesxs?platform=mac">canary version for Mac</a> with "Web Audio Input" enabled in chrome://flags. <a href="http://code.google.com/p/chromium/issues/detail?id=112367">Feature request tracker</a>. (Web audio is disabled for local resources: this must be loaded via http://, not file://.)</p>
+		<tr><th>Browser</th><th>Support as of 2012 Oct 6</th></tr>
+		<tr><td>Chrome</td><td>Available only in <a href="https://tools.google.com/dlpage/chromesxs?platform=mac">canary version for Mac</a> or for Windows with "Web Audio Input" enabled in chrome://flags. <a href="http://code.google.com/p/chromium/issues/detail?id=112367">Feature request tracker</a>. (Web audio is disabled for local resources: this must be loaded via http://, not file://.)</p>
 		<tr><td>Firefox, Safari, Opera, IE</td><td>No / not yet.</td></tr>
 	</table>
 
 	<p>References:</p>
 	<ul>
+	<li><a href="http://webaudiodemos.appspot.com/input/index.html">web audio demos</a></li>
 	<li><a href="http://phenomnomnominal.github.com">a guitar-tuner example by Craig Spence</a>.</li>
 	<li><a href="https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html">w3c WebAudio spec</a></li>
 	</ul>
