Update for Firefox / W3C spec compliance.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 	<h2>Browser Support</h2>
 	<p>See <a href="http://caniuse.com/stream">support for stream API</a> (in-browser audio acquisition) and <a href="http://caniuse.com/#feat=audio-api">web audio API</a> (in-browser audio processing).</p>
 	<table>
-		<tr><th>Browser</th><th>Support as of 2012 Oct 6</th></tr>
-		<tr><td>Chrome</td><td>Available only in <a href="https://tools.google.com/dlpage/chromesxs?platform=mac">canary version for Mac</a> or for Windows with "Web Audio Input" enabled in chrome://flags. <a href="http://code.google.com/p/chromium/issues/detail?id=112367">Feature request tracker</a>. (Web audio is disabled for local resources: this must be loaded via http://, not file://.)</p>
-		<tr><td>Firefox, Safari, Opera, IE</td><td>No / not yet.</td></tr>
+		<tr><th>Browser</th><th>Support as of 2013 Oct 17</th></tr>
+		<tr><td>Chrome</td><td>Available in Chrome v30 (tested on Mac). (Web audio is disabled for local resources: this must be loaded via http://, not file://. Also in Chrome Dev for Android v32.)</p>
+		<tr><td>Firefox</td><td>Supported in Firefox 25. <a href="https://wiki.mozilla.org/WebAudio_API_Rollout_Status">Implementation status</a>. Will load from local resources.</td></tr>
+		<tr><td>Safari</td><td>No / not yet.</td></tr>
+		<tr><td>Opera, IE</td><td>Not tested.</td></tr>
 	</table>
 
 	<p>References:</p>
