Add github code link.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<h1>Volume</h1>
 	<h2>Preface</h2>
 	<p>This shows visual feedback for the current input volume. It uses only javascript for audio processing.</p>
+	<p><a href="https://github.com/markfickett/volume">The code is available on github</a>.</p>
 	<h2>Browser Support</h2>
 	<p>See <a href="http://caniuse.com/stream">support for stream API</a> (in-browser audio acquisition) and <a href="http://caniuse.com/#feat=audio-api">web audio API</a> (in-browser audio processing).</p>
 	<table>
